--- a/index.ejs
+++ b/index.ejs
@@ -183,7 +183,7 @@
         <%} %>
     </section>
     <div class="my-10"></div>
-    <h2 id="skills-interests"><i class="fas fa-book"></i> SKILLS & KNOWLEDGE</h2>
+    <h2 id="skills-interests"><i class="fas fa-book"></i> TECHNICAL SKILLS</h2>
     <section class="flex flex-wrap gap-5 justify-center px-2">
         <% for(let skill of skills || []){  %>
         <div class="skill-block-wrapper">
